2007-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Removed old dependency.
	* Parser/TypeVisitor.cs, Parser/SharpDevelopTree/ReturnType.cs: Take
	  into account that the parser returns array dimensions starting at
	  0, not at 1.  Fixed some issues when resolving indexer types. Fixes
	  bug #79382.
	* Parser/LanguageItemVisitor.cs: When visiting an indexer, if there is
	  no indexer (it can be an array access), return the target type.
	* templates/GtkSharp2Project.xpt.xml: Fix template.

2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/GtkSharp2Project.xpt.xml: Use the new partial class model.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Echo resgen command line
	for debugging purpose.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): .resx file has paths
	relative to the .resx file itself.

2006-12-21  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use project's base
	directory as the working directory when invoking the compiler.
	(DoCompilation): Add param 'working_dir'.

2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Track changes in FileService API.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Filename arg to resgen
	should be quoted.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use resgen to convert .resx
	to embeddable resource format (.resources). Handle 'null' resourceId.

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, Parser/SharpDevelopTree/CompilationUnit.cs,
	  Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs, Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs, Makefile.am: Removed some
	  unnecessary Default* subclasses.